...
                ) {

                    Box(
                        modifier = Modifier
                            .fillMaxWidth()
                            .clickable { vm.modifyShowMessage() }
                            .testTag("titulo_principal"),
                        contentAlignment = Alignment.Center
                    ) {
                        Column(
                            horizontalAlignment = Alignment.CenterHorizontally,
                            verticalArrangement = Arrangement.spacedBy((-15).dp)
                        ) {
...
                        Column(
                            horizontalAlignment = Alignment.CenterHorizontally,
                            verticalArrangement = Arrangement.spacedBy(16.dp)
                        ) {
                            Button(
                                onClick = navigateTo2,
                                modifier = buttonModifier.testTag("boton_jugar"),
                                colors = ButtonDefaults.buttonColors(containerColor = uiVM.colorGold),
                                shape = CutCornerShape(4.dp)
                            ) {
                                Text("JUGAR", fontFamily = SpielgelFont, color = Color.Black, fontSize = 18.sp, fontWeight = FontWeight.Bold)
                            }

...
